# Toobix-Unified

./: .env.example  .gitignore  .vercelignore  ACHIEVEMENT_SUMMARY.md  ACTION_PLAN_3_MONTHS.md  ACTION_PLAN_OPTION_B.md  AI_COLLABORATION.md  AI_CONTEXT.md  AI_MEMORY.md  AI_MISSION_CONTROL.md  AI_NAVIGATION.md  AI_QUICK_REFERENCE.md  AI_SANDBOX_GUIDE.md  AI_SESSION_START.md  AI_SETUP_COMPLETE.md  API_INTEGRATION_GUIDE.md  ARCHITECTURE.md  ARCHIV_STRATEGIE.md  AUDIT_CHECKLIST.md  AUTH_SETUP_GUIDE.md  AUTONOMOUS_AGENT_GUIDE.md  AUTONOMOUS_LIVING_NETWORK.md  AUTONOMOUS_SYSTEM_README.md  BUILDING_COMPLETE.md  BUILD_REVOLUTIONARY_EXISTENTIAL.md  BUILD_SUMMARY_REVOLUTIONARY.md  CHANGELOG.md  CHATTY_CACHE_ISSUE.md  CHATTY_CODE_IS_LIVE.md  CHATTY_CONNECTOR_TEST.md  CHATTY_DEBUG_GUIDE.md  CHATTY_DIAGNOSTICS.md  CHATTY_IS_LIVE.md  CHATTY_NGROK_TIMEOUT_ANALYSIS.md  CHATTY_RECONNECT_ANLEITUNG.md  CHATTY_REST_ENDPOINTS.md  CHATTY_ROOT_CAUSE_ANALYSIS.md  CHATTY_TASKGROUP_FIX.md  CODE_OF_CONDUCT.md  COMMAND_CENTER_DESIGN.md  (+179 more)
.ai-workspace/: chatgpt-status.json  claude-status.json  copilot-status.json
.claude/: README.md
.githooks/: pre-commit
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
docs/: ARCHITECTURE_REVIEW.md  BRIDGE_INTEGRATION.md  BROWSER_INTEGRATION.md  CODE_LIBRARY_BLUEPRINT.md  CONSCIOUSNESS_ARCHITECTURE.md  CONSCIOUSNESS_QUICKSTART.md  CONSCIOUSNESS_ROTATION.md  CONSCIOUSNESS_ROTATION_WINDOWS.md  CONSCIOUSNESS_SYSTEM.md  CONTROL_MANUAL.md  DAS_SEIN_COMPLETE.md  DEV_WORKFLOW.md  ERROR_HANDLING_IMPLEMENTATION.md  (+30 more)
(+253 files in other folders)
